<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newbackground"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/main_dicee_logo"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline_top"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_right"
        app:layout_constraintStart_toEndOf="@+id/horizontal_guideline_top"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline_left"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dicee_logo" />

    <ImageView
        android:id="@+id/image_dice_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/main_left_dice"
        app:layout_constraintBottom_toTopOf="@+id/button_roll"
        app:layout_constraintEnd_toStartOf="@+id/image_dice_right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.42"
        app:srcCompat="@drawable/dice3" />

    <ImageView
        android:id="@+id/image_dice_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/main_right_dice"
        app:layout_constraintBottom_toTopOf="@+id/button_roll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_dice_left"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.42"
        app:srcCompat="@drawable/dice5" />


    <Button
        android:id="@+id/button_roll"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/main_rolling_dice_button"
        android:text="@string/button_roll_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/image_dice_right"
        app:layout_constraintStart_toStartOf="@+id/image_dice_left" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintGuide_percent="0.35"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>